Update Project with Pandas in Jupiter Notebook.ipynb

--- a/Project with Pandas in Jupiter Notebook.ipynb
+++ b/Project with Pandas in Jupiter Notebook.ipynb
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Симулираният CSV файл 'museum_visits.csv' е създаден успешно.\n",
-      "Заредени данни:\n",
+      "Simulated CSV file 'museum_visits.csv' created successfully.\n",
+      "Loaded data:\n",
       "    Period  Visits  Age\n",
       "0  Q1-2023    1500   30\n",
       "1  Q1-2023    1200   45\n",
@@ -19,7 +19,7 @@
       "3  Q2-2023    1300   50\n",
       "4  Q3-2023    2000   35\n",
       "\n",
-      "Общ брой посещения по период:\n",
+      "Total number of visits per period:\n",
       "Period\n",
       "Q1-2023    2700\n",
       "Q2-2023    3100\n",
@@ -27,7 +27,7 @@
       "Q4-2023    4100\n",
       "Name: Visits, dtype: int64\n",
       "\n",
-      "DataFrame с добавена колона за средна възраст:\n",
+      "DataFrame with an added column for average age:\n",
       "    Period  Visits  Age  AvgAge\n",
       "0  Q1-2023    1500   30    37.5\n",
       "1  Q1-2023    1200   45    37.5\n",
@@ -84,16 +84,16 @@
     "# - Adding a new 'AvgAge' column  to my DataFrame, which will contain the average age of visitors for each relevant period. I will use transform('mean') to apply the average back to the original DataFrame in order to see the average age for each row according to its period.\n",
     "df['AvgAge'] = df.groupby('Period')['Age'].transform('mean')\n",
     "\n",
-    "print(\"\\nDataFrame с добавена колона за средна възраст:\")\n",
+    "print(\"\\nDataFrame with an added column for average age:\")\n",
     "print(df.head())\n",
     "\n",
     "# It’s important to make a visualization in order to understandi data. I will use the bar chart to show the total number of visits by period.\n",
     "# Visualization of the total number of visits by period with a bar chart\n",
     "plt.figure(figsize=(10, 6))\n",
     "total_visits_by_period.plot.bar(color='skyblue')\n",
-    "plt.title('Общ брой посещения в музея по период')\n",
-    "plt.xlabel('Период')\n",
-    "plt.ylabel('Брой посещения')\n",
+    "plt.title('Total number of museum visits per period')\n",
+    "plt.xlabel('Periof')\n",
+    "plt.ylabel('Number of visits')\n",
     "plt.xticks(rotation=45)\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
     "plt.tight_layout()\n",
