Update Project with Pandas in Jupiter Notebook.ipynb

--- a/Project with Pandas in Jupiter Notebook.ipynb
+++ b/Project with Pandas in Jupiter Notebook.ipynb
@@ -52,7 +52,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Creating DataFrame with simylated data for museum visits /periods, number of visits, visitors’ age included/\n",
+    "# Creating DataFrame with simulated data for museum visits /periods, number of visits, visitors’ age included/\n",
     "data = {\n",
     "    'Period': ['Q1-2023', 'Q1-2023', 'Q2-2023', 'Q2-2023', 'Q3-2023', 'Q3-2023', 'Q4-2023', 'Q4-2023'],\n",
     "    'Visits': [1500, 1200, 1800, 1300, 2000, 1600, 2200, 1900],\n",
